--- a/Explore_DIV2K.ipynb
+++ b/Explore_DIV2K.ipynb
@@ -13,6 +13,7 @@
     "import matplotlib.pyplot as plt\n",
     "import cv2 as cv\n",
     "import scipy.io as sio\n",
+    "import skimage.io as skio\n",
     "from skimage import exposure\n",
     "\n",
     "%matplotlib widget\n",
@@ -92,51 +93,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 71,
    "metadata": {
     "kernel": "Python3"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 1028, 1054)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "img = cv.imread('DNN4SIM_data/sim_test_img_2.jpg', cv.IMREAD_GRAYSCALE)"
+    "# tif\n",
+    "img = skio.imread('DNN4SIM_data/sim_test_img_2.tif')\n",
+    "img.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "kernel": "Python3"
-   },
-   "outputs": [],
-   "source": [
-    "img_up = cv.resize(img, dsize=(1024,1024), interpolation=cv.INTER_LANCZOS4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "kernel": "Python3"
-   },
-   "outputs": [],
-   "source": [
-    "img_up = img_up/np.max(img_up)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "kernel": "Python3"
-   },
-   "outputs": [],
-   "source": [
-    "img_up = exposure.equalize_adapthist(img_up, clip_limit=0.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 76,
    "metadata": {
     "kernel": "Python3"
    },
@@ -144,7 +125,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36df8142617e43bf901f3180da829cb3",
+       "model_id": "5ed27313233f4db18faaeb315ef89233",
        "version_major": 2,
        "version_minor": 0
       },
@@ -158,7 +139,194 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf21314b49df41fa872c40faed783174",
+       "model_id": "b797b14e6ec74ef0b9b9080e9680266d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Show Widgets', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<iplabs.IPLabViewer at 0x24c90088a88>"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "viewer(img[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1028, 1054)"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img = img[0]\n",
+    "img.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1024, 1024)"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img = img[:1024, :1024]\n",
+    "img.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1024, 1024)"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# png\n",
+    "img = cv.imread('DNN4SIM_data/sim_test_img_2.png', cv.IMREAD_GRAYSCALE)\n",
+    "#img=img[img.shape[0]-img.shape[1]:,:]\n",
+    "img.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [],
+   "source": [
+    "img = cv.resize(img, dsize=(1024,1024), interpolation=cv.INTER_LANCZOS4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "img = img/np.max(img)\n",
+    "print(img.min(), img.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [],
+   "source": [
+    "# invert\n",
+    "img = img.max() - img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [],
+   "source": [
+    "img_up = exposure.equalize_adapthist(img, clip_limit=0.05)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [],
+   "source": [
+    "img[img > 0.5] = 1\n",
+    "img[img <= 0.5] += 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "82b5649263814bdeb6476da2a5849a18",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Output(layout=Layout(width='80%')), Output(), Output(layout=Layout(width='25%'))))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -172,12 +340,12 @@
    ],
    "source": [
     "plt.close('all')\n",
-    "view = viewer([img, img_up], subplots=(1,2), cmap='viridis')"
+    "view = viewer(img_up, cmap='viridis')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 84,
    "metadata": {
     "kernel": "Python3"
    },
@@ -188,7 +356,7 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "kernel": "Python3"
    },
@@ -489,14 +657,15 @@
     "ds = []\n",
     "ds_wf = []\n",
     "\n",
-    "snr = 20\n",
+    "snr = 10\n",
+    "\n",
     "for i in range(4):\n",
     "    ds_recons.append(sio.loadmat(f'DNN4SIM_data/DIV2K_recons_snr{snr}_{i}.mat')['recons_data'])\n",
-    "    ds.append(sio.loadmat(f'DNN4SIM_data/DIV2K_{i}.mat')['data'])\n",
+    "    #ds.append(sio.loadmat(f'DNN4SIM_data/DIV2K_{i}.mat')['data'])\n",
     "    ds_wf.append(sio.loadmat(f'DNN4SIM_data/DIV2K_wf_snr{snr}_{i}.mat')['wf_data'])\n",
     "\n",
     "ds_recons = np.concatenate(ds_recons, axis=0)\n",
-    "ds = np.concatenate(ds, axis=0)\n",
+    "#ds = np.concatenate(ds, axis=0)\n",
     "ds_wf = np.concatenate(ds_wf, axis=0)"
    ]
   },
@@ -542,14 +711,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "kernel": "Python3"
    },
    "outputs": [],
    "source": [
-    "for i in range(ds.shape[0]):\n",
-    "    ds[i] = process_img(apply_rosette(ds[i], rosette_1024))\n",
+    "for i in range(len(ds_recons)):\n",
+    "    #ds[i] = process_img(apply_rosette(ds[i], rosette_1024))\n",
     "    ds_recons[i] = process_img(ds_recons[i])\n",
     "    ds_wf[i] = process_img(ds_wf[i])"
    ]
@@ -604,15 +773,15 @@
    "source": [
     "with open(f'DNN4SIM_data/features_snr{snr}.npy', 'wb') as f:\n",
     "    np.save(f, ds_recons)\n",
-    "with open(f'DNN4SIM_data/labels_snr{snr}.npy', 'wb') as f:\n",
-    "    np.save(f, ds)\n",
+    "#with open(f'DNN4SIM_data/labels_snr{snr}.npy', 'wb') as f:\n",
+    "#    np.save(f, ds)\n",
     "with open(f'DNN4SIM_data/wf_snr{snr}.npy', 'wb') as f:\n",
     "    np.save(f, ds_wf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "kernel": "Python3"
    },
@@ -623,10 +792,10 @@
     "with open(f'DNN4SIM_data/features_snr{snr}_2.npy', 'wb') as f:\n",
     "    np.save(f, ds_recons[ds_recons.shape[0]//2:])\n",
     "    \n",
-    "with open(f'DNN4SIM_data/labels_snr{snr}_1.npy', 'wb') as f:\n",
-    "    np.save(f, ds[:ds.shape[0]//2])\n",
-    "with open(f'DNN4SIM_data/labels_snr{snr}_2.npy', 'wb') as f:\n",
-    "    np.save(f, ds[ds.shape[0]//2:])\n",
+    "#with open(f'DNN4SIM_data/labels_snr{snr}_1.npy', 'wb') as f:\n",
+    "#    np.save(f, ds[:ds.shape[0]//2])\n",
+    "#with open(f'DNN4SIM_data/labels_snr{snr}_2.npy', 'wb') as f:\n",
+    "#    np.save(f, ds[ds.shape[0]//2:])\n",
     "    \n",
     "with open(f'DNN4SIM_data/wf_snr{snr}_1.npy', 'wb') as f:\n",
     "    np.save(f, ds_wf[:ds_wf.shape[0]//2])\n",
