report draft finished

--- a/Explore_DIV2K.ipynb
+++ b/Explore_DIV2K.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "kernel": "Python3"
    },
@@ -654,10 +654,10 @@
    "outputs": [],
    "source": [
     "ds_recons = []\n",
-    "ds = []\n",
+    "#ds = []\n",
     "ds_wf = []\n",
     "\n",
-    "snr = 10\n",
+    "snr = 15\n",
     "\n",
     "for i in range(4):\n",
     "    ds_recons.append(sio.loadmat(f'DNN4SIM_data/DIV2K_recons_snr{snr}_{i}.mat')['recons_data'])\n",
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "kernel": "Python3"
    },
@@ -679,7 +679,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "758c36e9985e4953847fece88d8d53f5",
+       "model_id": "683c3a85f7484834aea4047ce1a1ce2b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -693,7 +693,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c98302ae2e241509626f5439bbde73c",
+       "model_id": "7fc6fa7843fc4d82863281f3045a5a4d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -706,12 +706,12 @@
     }
    ],
    "source": [
-    "view = viewer([ds[253], ds_recons[253], ds_wf[253]], subplots=(1,3), title=['Label', 'Feature', 'Widefield'], cmap='viridis', joint_zoom=True)"
+    "view = viewer([ds_recons[253], ds_wf[253]], subplots=(1,2), title=['Feature', 'Widefield'], cmap='viridis', joint_zoom=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "kernel": "Python3"
    },
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "kernel": "Python3"
    },
@@ -733,7 +733,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d7946f9ef844a09a17ec5dc92b3c558",
+       "model_id": "6aba0b1020864da6a7ab6d250292d541",
        "version_major": 2,
        "version_minor": 0
       },
@@ -747,7 +747,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d49868d9027444fd8396d31622ef2716",
+       "model_id": "ace7843efd444cf69dc8d26d1401d60d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -760,12 +760,12 @@
     }
    ],
    "source": [
-    "view = viewer([ds[62], ds_recons[62], ds_wf[62]], subplots=(1,3), title=['Label', 'Feature', 'Widefield'], cmap='viridis', joint_zoom=True)"
+    "view = viewer([ds_recons[62], ds_wf[62]], subplots=(1,2), title=['Feature', 'Widefield'], cmap='viridis', joint_zoom=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "kernel": "Python3"
    },
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "kernel": "Python3"
    },
@@ -804,13 +804,299 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "source": [
+    "### Generating mixed dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "kernel": "Python3"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "ds_snr = []\n",
+    "snrs = ['15', '20']\n",
+    "ds_type = 'wf'\n",
+    "num = 2\n",
+    "m = len(snrs)\n",
+    "for i in range(m):\n",
+    "    ds_snr.append(np.load(f'DNN4SIM_data/{ds_type}_snr{snrs[i]}_{num}.npy'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c534d52de0744dba90a9a5c3b30444ea",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Output(layout=Layout(width='80%')), Output(), Output(layout=Layout(width='25%'))))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "62a6571b5f7744f58fb1b0fa60356c2f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Show Widgets', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.close('all')\n",
+    "view = viewer([ds_snr[0][253], ds_snr[1][253]], subplots=(1,2), joint_zoom=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [],
+   "source": [
+    "ds_mixed = []\n",
+    "for i in range(len(ds_snr[0])):\n",
+    "    ds_mixed.append(ds_snr[m-1-i%m][i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7d8a380e46cc42649f52326da902bd9a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Output(layout=Layout(width='80%')), Output(), Output(layout=Layout(width='25%'))))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "10cdd217fe2a412eaa1b58e22c9e251b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Show Widgets', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.close('all')\n",
+    "n = 253\n",
+    "view = viewer([ds_mixed[n], ds_mixed[n+1], ds_mixed[n+2], ds_mixed[n+3]], subplots=(2,2), joint_zoom=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [],
+   "source": [
+    "# 1: 5, 10, 20, 35; 2: 5, 10, 15, 20; 3: 15, 20\n",
+    "with open(f'DNN4SIM_data/{ds_type}_snrMIX3_{num}.npy', 'wb') as f:\n",
+    "    np.save(f, ds_mixed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "source": [
+    "# Real test image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(9, 512, 512) (512, 512) (512, 512)\n"
+     ]
+    }
+   ],
+   "source": [
+    "img_sim = skio.imread('DNN4SIM_data/real_images/cos7_utubule488.tif')\n",
+    "img_recons = cv.resize(skio.imread('DNN4SIM_data/real_images/cos7_utubule488_SIM.tif'), (512,512), interpolation=cv.INTER_CUBIC )\n",
+    "img_wf = skio.imread('DNN4SIM_data/real_images/cos7_utubule488_wfMean.tif')\n",
+    "print(img_sim.shape, img_recons.shape, img_wf.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [],
+   "source": [
+    "img_recons[img_recons<0] = 0\n",
+    "img_wf[img_wf<0] = 0\n",
+    "img_recons = (img_recons-np.min(img_recons))/(np.max(img_recons)-np.min(img_recons))\n",
+    "img_wf = (img_wf-np.min(img_wf))/(np.max(img_wf)-np.min(img_wf))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv.imwrite('DNN4SIM_data/sim_test_img_real.png', img_recons*255)\n",
+    "cv.imwrite('DNN4SIM_data/sim_test_img_real_wf.png', img_wf*255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7d58058a021a4f26b09459d41ed9b27a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Output(layout=Layout(width='80%')), Output(), Output(layout=Layout(width='25%'))))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0fba77936f054f378b229f8d39fd5905",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Show Widgets', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.close('all')\n",
+    "view = viewer([img_recons, img_wf], joint_zoom=True, cmap='viridis', subplots=(1,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b54c866c25de4a929338f394fbe9c07c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Output(layout=Layout(width='80%')), Output(), Output(layout=Layout(width='25%'))))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cc48d1bf66d0462badfcbdd4397152c7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Show Widgets', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<iplabs.IPLabViewer at 0x1ef262d2ac8>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "images = [x for x in img_sim]\n",
+    "view = viewer(images, subplots=(3,3))"
+   ]
   }
  ],
  "metadata": {
