--- a/DNN_test.ipynb
+++ b/DNN_test.ipynb
@@ -53,6 +53,7 @@
    "source": [
     "# Neural Network\n",
     "## Index\n",
+    "The interesting parts of this notebook are:\n",
     "* [Single-image analysis](#Test-img)\n",
     "* [Multi-image analysis](#Compare-different-SNR-directly)\n",
     "\n",
@@ -713,26 +714,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "512"
-      ]
-     },
-     "execution_count": 123,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(range(255,767))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1272,39 +1253,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test img"
+    "# Test img\n",
+    "Analyze the DNN performance on the different test images."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "rosette_512 = np.load('DNN4SIM_data/rosette_512.npy')\n",
     "rosette_1024 = np.load('DNN4SIM_data/rosette_1024.npy')\n",
+    "\n",
+    "# Masks the FT of the ground-truth images to simulate a perfect SIM reconstruction\n",
     "def apply_rosette(img, rosette, sigma=10, border=10):\n",
     "    FT = np.fft.fftshift(np.fft.fft2(img))\n",
     "    FT[rosette == 0] = 1e-5\n",
     "    return np.real(np.fft.ifft2(np.fft.ifftshift(FT)))\n",
     "\n",
+    "# Returns the FT in dB\n",
     "def apply_fft(img):\n",
     "    FT = np.abs(np.fft.fftshift(np.fft.fft2(img)))\n",
     "    FT[FT == 0] = 1e-5\n",
     "    return 10*np.log10(FT)\n",
     "\n",
+    "# Normalizes an image to mean=0, std=1\n",
     "def process_img(img):\n",
     "    return (img - np.mean(img)) / np.std(img)\n",
     "\n",
-    "def rescale_img(img):\n",
+    "# Rescales the image to [0,1], changing the lim changes the brightness\n",
+    "def rescale_img(img, lim=1.0):\n",
     "    img = (img - np.min(img)) / (np.max(img) - np.min(img))\n",
+    "    img[img > lim] = lim\n",
+    "    img = img * (1/lim)\n",
     "    return img.astype(np.float64)\n",
     "\n",
+    "# Calculates the SNR of an image\n",
     "def snr(img):\n",
     "    m = np.mean(img)\n",
     "    sd = np.std(img)\n",
     "    return 10*np.log10(m/sd)\n",
     "\n",
+    "# Calculates the PSNR between two images\n",
     "def PSNR(img1, img2, mask=None):\n",
     "    if mask is None:\n",
     "        return 20*np.log10(np.max(img2)/np.sqrt(np.mean((img1-img2)**2)))\n",
@@ -1312,6 +1303,7 @@
     "        m = mask==255\n",
     "        return 20*np.log10(np.max(img2[m])/np.sqrt(np.mean((img1[m]-img2[m])**2)))\n",
     "\n",
+    "# Histogram equalization\n",
     "def stretch_contrast(img, c=0.03):\n",
     "    return exposure.equalize_adapthist(img, clip_limit=c)\n",
     "\n",
@@ -1363,58 +1355,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 58,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.3700191138300726"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "test_img_mask = cv.imread('DNN4SIM_data/sim_test_img_3_mask.png', cv.IMREAD_UNCHANGED)\n",
-    "ssim(test_label[test_img_mask==255], test_wf[test_img_mask==255])\n",
-    "#ssim(test_label, test_feature)"
+    "The next cell loads the test image with the specified SNR value."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "img = rescale_img(cv.imread(f'DNN4SIM_data/DIV2K/0170.png', cv.IMREAD_GRAYSCALE))\n",
-    "img = img[:1024,:1024]\n",
-    "cv.imwrite('sim_test_img_5.png', img*255)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "309757e21e1e438bbde1f1c8aa32f432",
+       "model_id": "95910c4834424173835110f1f5d8ccc7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1428,7 +1383,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90b0c29037e94eca8c8184964e283be0",
+       "model_id": "78568c9085c14bcf94a2e628d45856fc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1441,67 +1396,28 @@
     }
    ],
    "source": [
-    "orig_FT = apply_fft(test_orig);\n",
-    "net_output_FT = apply_fft(net_output);\n",
-    "img_list = [test_orig, test_label, test_feature, net_output, test_wf, orig_FT, label_FT, feature_FT, net_output_FT, wf_FT]\n",
-    "img_names = ['Original DIV2K', 'Ground-Truth', 'Net Input', 'Net Output', 'Widefield', 'Original FT', 'Ground-Truth FT', 'Net Input FT', 'Net Output FT', 'Widefield FT']\n",
-    "plt.close('all')\n",
-    "view = viewer(img_list, title=img_names, subplots=(2,5), cmap='viridis', joint_zoom=True)\n",
-    "view.fig.set_size_inches(10,4)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe43400d33fa45ca8e57d5389a5a3276",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Output(layout=Layout(width='80%')), Output(), Output(layout=Layout(width='25%'))))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "368ea5fd89e84131a42bfa05b798b0a5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Show Widgets', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "test_img = 'sim_test_img_4'\n",
+    "# Specify test image\n",
+    "test_img = 'sim_test_img_5'\n",
+    "# Specify SNR\n",
     "test_img_snr = '10'\n",
     "rosette = rosette_1024\n",
     "\n",
+    "# Load images\n",
     "test_feature = rescale_img(cv.imread(f'DNN4SIM_data/{test_img}_recons_snr{test_img_snr}.png', cv.IMREAD_GRAYSCALE))\n",
     "test_wf = rescale_img(cv.imread(f'DNN4SIM_data/{test_img}_wf_snr{test_img_snr}.png', cv.IMREAD_GRAYSCALE))\n",
     "test_orig = cv.imread(f'DNN4SIM_data/{test_img}.png', cv.IMREAD_GRAYSCALE)\n",
     "test_label = rescale_img(apply_rosette(test_orig, rosette))\n",
     "\n",
+    "# Normalize images\n",
     "test_feature_processed = process_img(test_feature)\n",
     "test_wf_processed = process_img(test_wf)\n",
     "test_label_processed = process_img(test_label)\n",
     "\n",
+    "# Generate Fourier transforms\n",
     "label_FT = apply_fft(test_label); feature_FT = apply_fft(test_feature); wf_FT = apply_fft(test_wf)\n",
     "img_list = [test_feature, test_label, test_wf, feature_FT, label_FT, wf_FT]\n",
     "\n",
+    "# Visual check\n",
     "plt.close('all')\n",
     "view = viewer(img_list, subplots=(2,3), cmap='viridis', joint_zoom=True)\n",
     "plt.tight_layout()\n",
@@ -1509,8 +1425,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next cell loads the specified DNN."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1785,16 +1708,16 @@
        ")"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# DNN name\n",
     "loss_id = 'snrMIX3_RCAN_custom_16_84_4'\n",
-    "#loss_id = 'snr20_custom_16_84'\n",
-    "structure = 'RCAN'\n",
-    "#structure = 'Unet'\n",
+    "structure = 'RCAN' # 'Unet'\n",
+    "\n",
     "model = None\n",
     "if structure == 'RCAN':\n",
     "    model = RCAN(n_feats=64, n_resgroups=3, n_resblocks=5, reduction=16)\n",
@@ -1808,10 +1731,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Generate the DNN output\n",
     "net_output = rescale_img(np.squeeze(model(torch.FloatTensor(test_feature_processed).unsqueeze(dim=0).unsqueeze(dim=0)).detach().numpy()))"
    ]
   },
@@ -1865,7 +1789,9 @@
     }
    ],
    "source": [
-    "x1=0;y1=0;x2=1024;y2=1024\n",
+    "# Specify zoom region\n",
+    "x1=0;y1=0;x2=1024;y2=1024 # Full image\n",
+    "\n",
     "#x1=633;y1=863;x2=783;y2=1013 # test_img_3_cross\n",
     "#x1=9;y1=890;x2=138;y2=1019 # test_img_3_circle\n",
     "\n",
@@ -1874,14 +1800,12 @@
     "\n",
     "img_list = [test_label[y1:y2, x1:x2], test_wf[y1:y2, x1:x2], test_feature[y1:y2, x1:x2], net_output[y1:y2, x1:x2]]\n",
     "\n",
-    "\n",
-    "#img_list = [test_feature, test_label, net_output, test_wf]\n",
-    "#img_list = [stretch_contrast(img, c=0.01) for img in img_list]\n",
-    "\n",
+    "# Print metrics\n",
     "print(f'SSIM:\\tReconstruction: {ssim(test_feature, test_label):.4f}\\n\\tNet output: \\t{ssim(net_output, test_label):.4f}\\n\\tWidefield: \\t{ssim(test_wf, test_label):.4f}')\n",
     "print(f'PSNR:\\tReconstruction: {PSNR(test_feature, test_label):.4f}\\n\\tNet output: \\t{PSNR(net_output, test_label):.4f}\\n\\tWidefield: \\t{PSNR(test_wf, test_label):.4f}')\n",
     "print(f'FRC:\\tReconstruction: {compute_frc(test_feature, test_label)[1]:.4f}\\n\\tNet output: \\t{compute_frc(net_output, test_label)[1]:.4f}\\n\\tWidefield: \\t{compute_frc(test_wf, test_label)[1]:.4f}')\n",
     "\n",
+    "# Visual comparison\n",
     "title_list = ['Reconstruction', 'Ground-Truth', 'Net Output', 'Widefield']\n",
     "plt.close('all')\n",
     "view = viewer(img_list, title=title_list, subplots=(2,2), cmap='viridis', joint_zoom=True)"
@@ -1908,6 +1832,7 @@
     }
    ],
    "source": [
+    "# Generates the intensity profile along a given line\n",
     "def get_line(img, p1, p2):\n",
     "    y0, x0 = p1\n",
     "    y1, x1 = p2\n",
@@ -1915,8 +1840,11 @@
     "    x, y = np.linspace(x0, x1, n), np.linspace(y0, y1, n)\n",
     "    return img[y.astype(np.int), x.astype(np.int)]\n",
     "\n",
+    "# Specify the line\n",
     "p1 = (920, 640); p2 = (920, 800) # horizontal over cross and thin lines\n",
     "#p1 = (1008, 75); p2 = (958, 116) # ascending diagonal of smallest circle\n",
+    "\n",
+    "# Display the intensity profiles\n",
     "plt.close('all')\n",
     "plt.figure(figsize=(10,10))\n",
     "for i in range(4):\n",
@@ -1954,6 +1882,7 @@
     }
    ],
    "source": [
+    "# Plot the FRC graph\n",
     "frc = compute_frc(net_output, test_label)\n",
     "plt.figure()\n",
     "plt.plot(frc[0])\n",
@@ -1965,7 +1894,109 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Compare different model SNR directly"
+    "The next 3 cells are test image specific."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3700191138300726"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Experiment with a mask for test image 3\n",
+    "test_img_mask = cv.imread('DNN4SIM_data/sim_test_img_3_mask.png', cv.IMREAD_UNCHANGED)\n",
+    "ssim(test_label[test_img_mask==255], test_wf[test_img_mask==255])\n",
+    "#ssim(test_label, test_feature)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Generate test image 5\n",
+    "img = rescale_img(cv.imread(f'DNN4SIM_data/DIV2K/0170.png', cv.IMREAD_GRAYSCALE))\n",
+    "img = img[:1024,:1024]\n",
+    "cv.imwrite('sim_test_img_5.png', img*255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7bb679df05db4f9aa8680053aa87f948",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Output(layout=Layout(width='80%')), Output(), Output(layout=Layout(width='25%'))))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "28b08cd58f3b44d8b16c889ba2f3f755",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Show Widgets', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Create 'Images and FTs' figure\n",
+    "orig_FT = apply_fft(test_orig);\n",
+    "test_feature_lim = rescale_img(test_feature, lim=0.4)\n",
+    "test_wf_lim = rescale_img(test_wf, lim=0.6)\n",
+    "net_output_FT = apply_fft(net_output);\n",
+    "img_list = [test_orig, test_label, test_feature_lim, net_output, test_wf_lim, orig_FT, label_FT, feature_FT, net_output_FT, wf_FT]\n",
+    "img_names = ['Original DIV2K', 'Ground-Truth', 'Reconstruction', 'Net Output', 'Widefield', 'Original FT', 'Ground-Truth FT', 'Reconstruction FT', 'Net Output FT', 'Widefield FT']\n",
+    "plt.close('all')\n",
+    "view = viewer(img_list, title=img_names, subplots=(2,4), cmap='viridis', joint_zoom=True)\n",
+    "view.fig.set_size_inches(8,4)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compare different model SNR directly\n",
+    "The following cells load and compare multiple DNNs directly."
    ]
   },
   {
@@ -1974,21 +2005,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Specify the DNNs\n",
     "model_snrs = ['MIX', 'MIX2', 'MIX3']\n",
     "id_ = 'RCAN_custom_16_84_4'\n",
+    "# Specify the test image and SNR\n",
     "test_img = 'sim_test_img_2'\n",
     "test_img_snr = 20\n",
     "\n",
+    "# Load test images\n",
     "test_feature = rescale_img(cv.imread(f'DNN4SIM_data/{test_img}_recons_snr{test_img_snr}.png', cv.IMREAD_GRAYSCALE))\n",
     "test_wf = rescale_img(cv.imread(f'DNN4SIM_data/{test_img}_wf_snr{test_img_snr}.png', cv.IMREAD_GRAYSCALE))\n",
     "test_label = rescale_img(apply_rosette(cv.imread(f'DNN4SIM_data/{test_img}.png', cv.IMREAD_GRAYSCALE), rosette_1024))\n",
     "\n",
+    "# Normalize images\n",
     "test_feature_processed = process_img(test_feature)\n",
     "test_wf_processed = process_img(test_wf)\n",
     "test_label_processed = process_img(test_label)\n",
     "\n",
     "net_outputs = []\n",
-    "\n",
+    "# Generate DNN outputs for all models\n",
     "for snr in model_snrs:\n",
     "    loss_id = f'snr{snr}_{id_}'\n",
     "    # Load corresponding model\n",
@@ -2033,13 +2068,16 @@
     }
    ],
    "source": [
-    "#x1=0;y1=0;x2=1024;y2=1024\n",
+    "# Specify zoom region\n",
+    "#x1=0;y1=0;x2=1024;y2=1024 # Full image\n",
+    "\n",
     "#x1=633;y1=863;x2=783;y2=1013 # test_img_3_cross\n",
     "#x1=9;y1=890;x2=138;y2=1019 # test_img_3_circle\n",
     "\n",
     "x1=372;y1=376;x2=522;y2=526 # test_img_2\n",
     "#x1=360;y1=660;x2=510;y2=810 # test_img_4\n",
     "\n",
+    "# Visual comparison\n",
     "img_list = [test_label[y1:y2, x1:x2], test_wf[y1:y2, x1:x2], test_feature[y1:y2, x1:x2]] + [x[y1:y2, x1:x2] for x in net_outputs]\n",
     "output_names = [f'Net output snr{snr}' for snr in model_snrs]\n",
     "title_list = ['Ground-Truth', f'Widefield snr{test_img_snr}', f'Reconstruction snr{test_img_snr}'] + output_names\n",
@@ -2055,16 +2093,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save the figure\n",
     "view.fig.savefig(f'DNN4SIM_data/results_images/test_img_{test_img.split(\"_\")[-1]}_model_comp_snr{test_img_snr}.png')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 196,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "view.fig.savefig(f'DNN4SIM_data/results_images/test_img_{test_img.split(\"_\")[-1]}_model_comp_snr{test_img_snr}_cross.png')"
    ]
   },
   {
@@ -2089,6 +2119,7 @@
     }
    ],
    "source": [
+    "# Print metrics\n",
     "print(f'Test image has snr of {test_img_snr}.\\n' + \n",
     "      f'\\n\\t\\t|   SSIM   |   PSNR   |   FRC    |\\n' + 50*'-' + \n",
     "      f'\\nReconstruction  |  {ssim(test_feature, test_label):.4f}  |  {PSNR(test_feature, test_label):.4f} |  {compute_frc(test_label, test_feature)[1]:.4f}  |' + \n",
@@ -2107,7 +2138,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Compare different image SNRs"
+    "## Compare different image SNRs\n",
+    "The following cells compare different test images and different DNNs"
    ]
   },
   {
@@ -2116,8 +2148,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Specify test image snrs\n",
     "img_snrs = [5, 10, 15, 20]\n",
+    "# Specify DNN names\n",
     "ids_ = ['MIX_RCAN_custom_16_84_4', 'MIX2_RCAN_custom_16_84_4', 'MIX3_RCAN_custom_16_84_4']\n",
+    "# Specify test image\n",
     "test_img = 'sim_test_img_4'\n",
     "\n",
     "net_outputs = []\n",
@@ -2150,6 +2185,7 @@
    },
    "outputs": [],
    "source": [
+    "# Generate FRC graphs\n",
     "frcs_out = []\n",
     "for j in range(len(ids_)):\n",
     "    frcs_out.append([compute_frc(test_label, net_outputs[i][j])[0] for i in range(len(img_snrs))])\n",
@@ -2180,6 +2216,7 @@
     }
    ],
    "source": [
+    "# Plot them\n",
     "x = np.linspace(0, np.pi, len(frcs_wf[0]))\n",
     "plt.close('all'); fig = plt.figure(figsize=(8,6))\n",
     "out_names = ['snr' + s.split('_')[0] for s in ids_]\n",
@@ -2217,6 +2254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save figure as png and .pkl for possible changes\n",
     "with open(f'DNN4SIM_data/results_images/{\"_\".join(test_img.split(\"_\")[1:4])}_comp_frc.pkl','wb') as fid:\n",
     "    pickle.dump(fig, fid)\n",
     "fig.savefig(f'DNN4SIM_data/results_images/{\"_\".join(test_img.split(\"_\")[1:4])}_comp_frc.png')"
@@ -2235,12 +2273,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load a .pkl figure\n",
     "plt.close('all')\n",
     "with open('test_figure.pkl','rb') as fid:\n",
     "    fig = pickle.load(fid)\n",
     "axs = fig.axes\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visual comparison"
    ]
   },
   {
@@ -2276,6 +2322,13 @@
     "    plt.title(title_list[i])\n",
     "    plt.plot(get_line(img_list[i], p1, p2))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Numerical comparison"
    ]
   },
   {
